tela de relatorios

--- a/public/pages/lancamentos.html
+++ b/public/pages/lancamentos.html
@@ -109,110 +109,112 @@
 
 
             <!-- INICIO DA TABELA -->
-            <div class="row">
-                <div class="tabela-dia col d-flex align-items-center justify-content-center">
-                    <span class="fs-3 fw-bold">20</span>
+            <div id="tabela_pai_lancamentos">
+                <div class="row">
+                    <div class="tabela-dia col d-flex align-items-center justify-content-center">
+                        <span class="fs-3 fw-bold">20</span>
+                    </div>
                 </div>
-            </div>
-            <hr class="m-0">
-            <table class="table table-borderless">
-                <tbody>
-                    <tr>
-                        <td>
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class='bx bxs-cart icone mercado'></i>
+                <hr class="m-0">
+                <table class="table table-borderless">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <i class='bx bxs-cart icone mercado'></i>
+                                    </div>
+                                    <div class="col-10 d-flex align-items-center">
+                                        <span>Mercado</span>
+                                    </div>
                                 </div>
-                                <div class="col-10 d-flex align-items-center">
-                                    <span>Mercado</span>
+                            </td>
+                            <td>Despesas</td>
+                            <td>R$-200</td>
+                            <td class="text-danger">Não pago</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <i class='bx bx-closet icone roupa'></i>
+                                    </div>
+                                    <div class="col-10 d-flex align-items-center">
+                                        <span>Roupas</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td>Despesas</td>
-                        <td>R$-200</td>
-                        <td class="text-danger">Não pago</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class='bx bx-closet icone roupa'></i>
+                            </td>
+                            <td>Despesas</td>
+                            <td>R$-1000</td>
+                            <td class="text-danger">Não pago</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <i class='bx bx-dollar icone icon-receita'></i>
+                                    </div>
+                                    <div class="col-10 d-flex align-items-center">
+                                        <span>Venda</span>
+                                    </div>
                                 </div>
-                                <div class="col-10 d-flex align-items-center">
-                                    <span>Roupas</span>
-                                </div>
-                            </div>
-                        </td>
-                        <td>Despesas</td>
-                        <td>R$-1000</td>
-                        <td class="text-danger">Não pago</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class='bx bx-dollar icone icon-receita'></i>
-                                </div>
-                                <div class="col-10 d-flex align-items-center">
-                                    <span>Venda</span>
-                                </div>
-                            </div>
-                        </td>
-                        <td>Receita</td>
-                        <td>R$4500</td>
-                        <td>Recebido</td>
-                        <td>-</td>
-                    </tr>
-                </tbody>
-            </table>
-            <!-- FIM DA TABELA -->
-
-            <!-- INICIO DE TABELA -->
-            <div class="row">
-                <div class="tabela-dia col d-flex align-items-center justify-content-center">
-                    <span class="fs-3 fw-bold">24</span>
+                            </td>
+                            <td>Receita</td>
+                            <td>R$4500</td>
+                            <td>Recebido</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- FIM DA TABELA -->
+    
+                <!-- INICIO DE TABELA -->
+                <div class="row">
+                    <div class="tabela-dia col d-flex align-items-center justify-content-center">
+                        <span class="fs-3 fw-bold">24</span>
+                    </div>
                 </div>
+                <hr class="m-0">
+                <table class="table table-borderless">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <i class='bx bx-closet icone roupa'></i>
+                                    </div>
+                                    <div class="col-10 d-flex align-items-center">
+                                        <span>Roupas</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>Despesas</td>
+                            <td>R$-120</td>
+                            <td class="text-danger">Não pago</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <i class='bx bx-dollar icone icon-receita'></i>
+                                    </div>
+                                    <div class="col-10 d-flex align-items-center">
+                                        <span>Venda</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>Receita</td>
+                            <td>R$100</td>
+                            <td>Recebido</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- FIM DE TABELA -->
             </div>
-            <hr class="m-0">
-            <table class="table table-borderless">
-                <tbody>
-                    <tr>
-                        <td>
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class='bx bx-closet icone roupa'></i>
-                                </div>
-                                <div class="col-10 d-flex align-items-center">
-                                    <span>Roupas</span>
-                                </div>
-                            </div>
-                        </td>
-                        <td>Despesas</td>
-                        <td>R$-120</td>
-                        <td class="text-danger">Não pago</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class='bx bx-dollar icone icon-receita'></i>
-                                </div>
-                                <div class="col-10 d-flex align-items-center">
-                                    <span>Venda</span>
-                                </div>
-                            </div>
-                        </td>
-                        <td>Receita</td>
-                        <td>R$100</td>
-                        <td>Recebido</td>
-                        <td>-</td>
-                    </tr>
-                </tbody>
-            </table>
-            <!-- FIM DE TABELA -->
 
             <div class="row mt-5">
                 <div class="col-11 d-flex align-items-center justify-content-end">
@@ -355,7 +357,7 @@
     </section>
 
     <script src="../js/sidebar.js"></script>
-    <script src="../js/script.js"></script>
+    <!-- <script src="../js/script.js"></script> -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
     <script src="../js/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
@@ -364,6 +366,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
+        <script src="../js/lancamentos.js"></script>
 </body>
 
 </html>
